--- a/app/views/search/results.erb
+++ b/app/views/search/results.erb
@@ -175,13 +175,15 @@ input[type="checkbox"].checkbox:disabled + label {
           <div style="position: relative;">
           <figure>
             <img class="center-block" src="<%= recipe.image_url %>"/>
-              <% if @search_page && !(@saved_recipes.include?(recipe))%>
-              <form method="post" action="/saved_recipes">
-              <input type = "hidden" name="recipe_id" value="<%= recipe.id %>">
-              <button type="submit" class="btn btn-default" aria-label="Left Align" style="position: absolute; top: 5px; left: 455px; background-color: rgba(255,255,255,0.5)">
-              <span class="glyphicon glyphicon-heart" aria-hidden="true" style="color: rgb(255,128,114)"></span>
-              </button>
-              </form>
+              <% if @user %>
+                <% if @search_page && !(@saved_recipes.include?(recipe))%>
+                <form method="post" action="/saved_recipes">
+                <input type = "hidden" name="recipe_id" value="<%= recipe.id %>">
+                <button type="submit" class="btn btn-default" aria-label="Le`ft Align" style="position: absolute; top: 5px; left: 455px; background-color: rgba(255,255,255,0.5)">
+                <span class="glyphicon glyphicon-heart" aria-hidden="true" style="color: rgb(255,128,114)"></span>
+                </button>
+                </form>
+                <% end %>
               <% end %>
           </figure>
           </div>
