Landing page layout done

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -81,6 +81,6 @@ img { max-width: 100%; }
 .landing-page .row { margin-bottom: 10em; }
 .landing-page .row:first-of-type { margin-top: 0.3em; }
 .landing-page .row img { position: absolute; left: 0; top: 0; padding: 7px;}
-.landing-page .row p { z-index: 100; position: relative; color: white; margin-top: 20px; margin-left:5px; }
+.landing-page .row p { z-index: 100; position: relative; color: white; margin-top: 1.9em; text-align: center; text-transform: uppercase; font-size: 2.9em; margin-bottom: -85px; }
 
 @font-face { font-family: 'Geomanist'; src: url("/fonts/geomanist-regular-webfont.ttf"); }
