--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -68,7 +68,7 @@
 
       <ul class="nav navbar-nav navbar-right">
 
-  <!--       <% if @user %> -->
+     <% if @user %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= @user.name %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -78,14 +78,14 @@
               <li><a href="/logout">Log Out</a></li>
             </ul>
           </li>
-      <!--   <% else %>
+        <% else %>
           <li class="dropdown">
             <a href="" class="dropdown-toggle">SignUp</a>
           </li>
           <li class="dropdown">
             <a href="/users/login" class="dropdown-toggle">Login</a>
           </li>    
-        <% end %>   -->
+        <% end %>  
 
       </ul>
     </div><!-- /.navbar-collapse -->
