added homepage links

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -15,7 +15,7 @@
     <!-- Beginning of first row -->
     <article class="row">
       <div class="col-md-4">
-        <img src="/img/home_pic.jpg">
+        <a href='/homepage_search/5'><img src="/img/home_pic.jpg">
         <p>Paleo</p>
       </div>
 
