--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,14 @@
+<style>
+
+  .homepage_link:hover{
+    opacity: 0.7;
+  }
+  a:hover{
+    font-weight: bold;
+    text-decoration: none;
+  }
+
+</style> 
 
 <body>
 <main id ="main-container">
@@ -15,17 +26,17 @@
     <!-- Beginning of first row -->
     <article class="row">
       <div class="col-md-4">
-        <a href='/homepage_search/5'><img src="/img/home_pic.jpg">
+        <a href='/homepage_search/5'class="homepage_link"><img src="/img/home_pic.jpg">
         <p>Paleo</p>
       </div>
 
       <div class="col-md-4">
-        <img src="/img/home_pic.jpg">
+        <a href='/homepage_search/3'class="homepage_link"><img src="/img/home_pic.jpg">
         <p>Vegetarian</p>
       </div>
 
       <div class="col-md-4">
-        <img src="/img/home_pic.jpg">
+        <a href='/homepage_search/6'class="homepage_link"><img src="/img/home_pic.jpg">
         <p>Lactose</p>
       </div>
 
@@ -35,17 +46,17 @@
     <!-- Beginning of second row -->
     <article class="row">
       <div class="col-md-4">
-        <img src="/img/home_pic.jpg">
+        <a href='/homepage_search/4'class="homepage_link"><img src="/img/home_pic.jpg">
         <p>Gluten Free</p>
       </div>
 
       <div class="col-md-4">
-        <img src="/img/home_pic.jpg">
+        <a href='/homepage_search/1'class="homepage_link"><img src="/img/home_pic.jpg">
         <p>Pescatarian</p>
       </div>
 
       <div class="col-md-4">
-        <img src="/img/home_pic.jpg">
+        <a href='/homepage_search/2'class="homepage_link"><img src="/img/home_pic.jpg">
         <p>Vegan</p>
       </div>
 
