--- a/app/views/search/results.erb
+++ b/app/views/search/results.erb
@@ -32,6 +32,8 @@ input[type="checkbox"].checkbox:disabled + label {
 
 #refine_search {
   padding: 1em;
+  margin-top: 1.5em;
+  margin-bottom: -1em;
 }
 </style>
 <main>
