--- a/app/views/search/results.erb
+++ b/app/views/search/results.erb
@@ -179,7 +179,7 @@ input[type="checkbox"].checkbox:disabled + label {
                 <% if @search_page && !(@saved_recipes.include?(recipe))%>
                 <form method="post" action="/saved_recipes">
                 <input type = "hidden" name="recipe_id" value="<%= recipe.id %>">
-                <button type="submit" class="btn btn-default" aria-label="Le`ft Align" style="position: absolute; top: 5px; left: 455px; background-color: rgba(255,255,255,0.5)">
+                <button type="submit" class="btn btn-default" aria-label="Left Align" style="position: absolute; top: 5px; left: 455px; background-color: rgba(255,255,255,0.5)">
                 <span class="glyphicon glyphicon-heart" aria-hidden="true" style="color: rgb(255,128,114)"></span>
                 </button>
                 </form>
