landing page done

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -14,7 +14,7 @@
 
 </style> 
 
-<body>
+<body id="main-body">
 <main id ="main-container">
   <div class="main-img">
     <img src="/img/ingredients_photo_main.jpg">
@@ -30,17 +30,17 @@
     <!-- Beginning of first row -->
     <article class="row">
       <div class="col-md-4">
-        <a href='/homepage_search/1'class="homepage_link"><img src="/img/home_pic.jpg">
+        <a href='/homepage_search/1'class="homepage_link"><img src="/img/main_pescatarian.jpg">
         <p>Pescatarian</p>
       </div>
 
       <div class="col-md-4">
-        <a href='/homepage_search/2'class="homepage_link"><img src="/img/home_pic.jpg">
+        <a href='/homepage_search/2'class="homepage_link"><img src="/img/main_vegan.jpg">
         <p>Vegan</p>
       </div>
 
       <div class="col-md-4">
-        <a href='/homepage_search/3'class="homepage_link"><img src="/img/home_pic.jpg">
+        <a href='/homepage_search/3'class="homepage_link"><img src="/img/main_vegetarian.jpg">
         <p>Vegetarian</p>
       </div>
 
@@ -50,17 +50,17 @@
     <!-- Beginning of second row -->
     <article class="row">
       <div class="col-md-4">
-        <a href='/homepage_search/4'class="homepage_link"><img src="/img/home_pic.jpg">
+        <a href='/homepage_search/4'class="homepage_link"><img src="/img/main_gluten.jpg">
         <p>Gluten-Free</p>
       </div>
 
       <div class="col-md-4">
-        <a href='/homepage_search/5'class="homepage_link"><img src="/img/home_pic.jpg">
+        <a href='/homepage_search/5'class="homepage_link"><img src="/img/main_paleo.jpg">
         <p>Paleo</p>
       </div>
 
       <div class="col-md-4">
-        <a href='/homepage_search/6'class="homepage_link"><img src="/img/home_pic.jpg">
+        <a href='/homepage_search/6'class="homepage_link"><img src="/img/main_lactose.jpeg">
         <p>Lactose-Free</p>
       </div>
 
