--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,54 @@
-<form method="POST" action="/users/login">
+
+<body>
+<main>
+  <section class="user container">
+    <article class="row">
+      <div class="col-sm-10 col-sm-push-1">
+        <header>
+          <h1 class="text-center">Welcome,</h1>
+        </header>
+        <figure>
+          <img id="logo-pic" class="center-block" src="/img/lets_spoon_logo.png"/>
+        </figure>
+
+              <form action="/users/login" method="post" class="form-horizontal">
+               <div class="form-group">
+                  <label for="inputName1" class="col-sm-2 control-label" >Email</label>
+                    <div class="col-sm-8">
+                      <input class="form-control" type="email" id="email" name="email" placeholder="Enter your email.." required>
+                    </div>
+                </div>
+
+            <div class="form-group">
+             <label for="inputEmail3" class="col-sm-2 control-label" >Password</label>
+              <div class="col-sm-8">
+                <input class="form-control"type="password" id="password" name="password" placeholder="Enter your password.." required>
+              </div>
+            </div>
+            
+            <div class="form-group">
+              <div class="col-sm-offset-3 col-sm-5">
+                <button class="update btn btn-default" value="Login">Login</button>
+              </div>
+            </div>
+          </form>
+      </div>
+    </article>
+  </section>
+</main>
+
+
+
+
+<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+</body>
+
+
+
+<!-- <form method="POST" action="/users/login">
   <label for="email">Email: </label>
   <input type="email" id="email" name="email" placeholder="Enter your email.." required><br>
   <label for="password">Password: </label>
   <input type="password" id="password" name="password" placeholder="Enter your password.." required><br>
   <input type="submit" value="Login">
-</form>
+</form> -->
