--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -28,7 +28,7 @@
             
             <div class="form-group">
               <div class="col-sm-offset-3 col-sm-5">
-                <button class="update btn btn-default" value="Login">Login</button>
+                <button id="login" class="update btn btn-default" value="Login">Login</button>
               </div>
             </div>
           </form>
