--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -33,6 +33,7 @@ img { max-width: 100%; }
 .user .checkbox { height: 10px; }
 .user .check { margin-left: 70px; margin-top: -12px; }
 .user #logo-pic { max-width: 100%; width: auto; height: auto; }
+.user #login { margin-top:  0; margin-left: 4em;}
 
 .navbar,
 .navbar-default { background-color: #c11f0f; border-color: #9a1a0c; }
