removing byebug from gemfile for deployment to heroku

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -30,17 +30,17 @@
     <!-- Beginning of first row -->
     <article class="row">
       <div class="col-md-4">
-        <a href='/homepage_search/1'class="homepage_link"><img src="/img/main_pescatarian.jpg">
+        <a href='/homepage_search/1'class="homepage_link"><img src="/img/main_pescatarian.jpg"></a>
         <p>Pescatarian</p>
       </div>
 
       <div class="col-md-4">
-        <a href='/homepage_search/2'class="homepage_link"><img src="/img/main_vegan.jpg">
+        <a href='/homepage_search/2'class="homepage_link"><img src="/img/main_vegan.jpg"></a>
         <p>Vegan</p>
       </div>
 
       <div class="col-md-4">
-        <a href='/homepage_search/3'class="homepage_link"><img src="/img/main_vegetarian.jpg">
+        <a href='/homepage_search/3'class="homepage_link"><img src="/img/main_vegetarian.jpg"></a>
         <p>Vegetarian</p>
       </div>
 
@@ -50,17 +50,17 @@
     <!-- Beginning of second row -->
     <article class="row">
       <div class="col-md-4">
-        <a href='/homepage_search/4'class="homepage_link"><img src="/img/main_gluten.jpg">
+        <a href='/homepage_search/4'class="homepage_link"><img src="/img/main_gluten.jpg"></a>
         <p>Gluten-Free</p>
       </div>
 
       <div class="col-md-4">
-        <a href='/homepage_search/5'class="homepage_link"><img src="/img/main_paleo.jpg">
+        <a href='/homepage_search/5'class="homepage_link"><img src="/img/main_paleo.jpg"></a>
         <p>Paleo</p>
       </div>
 
       <div class="col-md-4">
-        <a href='/homepage_search/6'class="homepage_link"><img src="/img/main_lactose.jpeg">
+        <a href='/homepage_search/6'class="homepage_link"><img src="/img/main_lactose.jpeg"></a>
         <p>Lactose-Free</p>
       </div>
 
